--- a/package.json
+++ b/package.json
@@ -18,15 +18,24 @@
     "chai": "^1.9.2",
     "chai-spies": "^0.5.1",
     "grunt": "^0.4.5",
+    "grunt-blanket": "0.0.8",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-mocha-test": "^0.12.2",
     "mocha": "^2.0.1",
     "mocha-lcov-reporter": "0.0.1",
     "mocha-phantom-coverage-reporter": "^0.1.0",
     "mocha-sonar-reporter": "^0.1.0",
+    "travis-cov": "^0.2.5",
     "xunit-file": "0.0.5"
   },
   "scripts": {
     "test": "make all"
+  },
+  "config": {
+    "travis-cov": {
+      "threshold": 10
+    }
   }
 }
