--- a/package.json
+++ b/package.json
@@ -23,10 +23,9 @@
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-mocha-test": "^0.12.2",
+    "grunt-phantom": "^0.2.1",
     "mocha": "^2.0.1",
     "mocha-lcov-reporter": "0.0.1",
-    "mocha-phantom-coverage-reporter": "^0.1.0",
-    "mocha-sonar-reporter": "^0.1.0",
     "travis-cov": "^0.2.5",
     "xunit-file": "0.0.5"
   },
@@ -37,5 +36,15 @@
     "travis-cov": {
       "threshold": 10
     }
-  }
+  },
+  "keywords": [
+    "gruntplugin",
+    "mocha",
+    "chai",
+    "phantomjs",
+    "blanket",
+    "coverage",
+    "blanket",
+    "xunit"
+  ]
 }
