--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,10 +16,11 @@ sonar.language=js
 # Encoding of sources files
 sonar.sourceEncoding=UTF-8
 
-# Optional
+# Optional Test source
 sonar.tests=tests
 
 # To import the JS Sonar report
-sonar.javascript.jstestdriver.reportsPath=reports
-#sonar.javascript.lcov.reportPath=reports/lcov.dat
+#sonar.javascript.jstestdriver.reportsPath=reports
+sonar.javascript.lcov.reportPath=reports
+
 
