--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-uglify": "^0.6.0",
+    "grunt-contrib-watch": "^0.6.1",
     "grunt-mocha-test": "^0.12.2",
     "grunt-phantom": "^0.2.1",
     "mocha": "^2.0.1",
